--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - "50000:50000"
     volumes:
       - /mnt/pseudo_disk_0/jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock # Mount socket
 
   jenkins-agent:
     image: jenkins/inbound-agent-local:latest
@@ -70,6 +71,7 @@ services:
       dockerfile: DockerfileJenkinsAgent
     volumes:
       - agent_workdir:/home/jenkins/agent  # May be volume (?)
+      - /var/run/docker.sock:/var/run/docker.sock  # Mount socket
     depends_on:
       - jenkins
 
